# Piscadela

./: CMakeLists.txt  Icon.rc  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  videosink.cpp  videosink.h  workercamera.cpp  workercamera.h  workercoder.cpp  workercoder.h
